# AEG_R07_Herramientas_para_la_gestion

./: .env  00_generador_prompts.py  02_juez.py  API_Gemini.ipynb  Preguntas_Modelos.csv  README.md  banco_prompts.json  dataset_final_experimento.parquet  dataset_final_experimento_v2.parquet  main.py  pyproject.toml  resultados_benchmark.csv
codigo/: 01_main.py  03_generador_graficos.py  dataset_pruebas.json
