[project]
name = "aeg-r07-herramientas-para-la-gestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openai>=2.16.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
]
